Moved the table context menu to the shared context menu. Merged the main table menu with the tree menu. Added recursive delete for meta nodes. Added the context menu to the image preview of the table. Limited the undo of the auto fields to prevent feedback issues. Moved the template string from metatranscript type to metatranscript originator. Added a class to handle the Shibboleth connection. Added Shibboleth login code. Reduced non error output on import / export. Added button in the import/export dialogue to open a table of the nodes with errors importing/exporting. Made more robust the listing of directories, network directories and remote URLs. When a corpus link or sub node such as actor is added or removed the history of the node is now saved. Updated the "open in external application" to be more robust. Added import corpus branch to the context menu. Prevented duplicates in the root of any tree and prevented directories and child nodes in the root of the local corpus tree. Made the field change triggers more robust. When a remote a node is reimported the history of the local version will be bumped (but only if local changes have been made). Added connection speed test so that files do not get md5summed over a slow network share.